[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets-MNR/Notalot35Regular-8DeD.ttf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/WinResumeMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.533333 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.533333 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.533333 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.533333 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.682353 )

[sub_resource type="Theme" id=6]
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[node name="WinResumeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.717647 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -22.0
margin_right = 51.0
margin_bottom = 22.0
theme = SubResource( 6 )

[node name="Reciclaveis" type="Button" parent="VBoxContainer"]
margin_right = 102.0
margin_bottom = 11.0
custom_colors/font_color_focus = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_hover = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Recyclable"

[node name="NReciclaveis" type="Button" parent="VBoxContainer"]
margin_top = 15.0
margin_right = 102.0
margin_bottom = 26.0
custom_colors/font_color_focus = Color( 0.878431, 0.631373, 0.309804, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.631373, 0.309804, 1 )
custom_colors/font_color_pressed = Color( 0.52549, 0.333333, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Not Recyclable"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 102.0
margin_bottom = 41.0
custom_colors/font_color_focus = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_hover = Color( 0.541176, 0.878431, 0.309804, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Back to Menu"

[connection signal="pressed" from="VBoxContainer/Reciclaveis" to="." method="_on_Reciclaveis_pressed"]
[connection signal="pressed" from="VBoxContainer/NReciclaveis" to="." method="_on_NReciclaveis_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
